--- a/specsmart/templates/base.html
+++ b/specsmart/templates/base.html
@@ -59,6 +59,7 @@
                                                 <ul class="submenu">
                                                     <li><a href="{% url 'blog:blogs' %}">Блоги</a></li>
                                                     <li><a href="{% url 'blog:blog' %}">Один блог</a></li>
+                                                    <li><a href="{% url 'blog:tag_list' %}">Список тегов</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="{% url 'blog:contacts' %}">Контакты</a></li>
