--- a/specsmart/blogapp/templates/blogapp/index.html
+++ b/specsmart/blogapp/templates/blogapp/index.html
@@ -92,13 +92,6 @@
     </div>
     <!-- about_area_end -->
     <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center mb-50">
-                        <h3>Наши проекты</h3>
-                    </div>
-                </div>
-            </div>
         <div class="row">
             {% for item in posts %}
             <div class="col-xl-6 col-md-6 col-lg-6">
@@ -281,7 +274,7 @@
                     </div>
                     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="row">
-            {% for item in posts %}
+            {% for item in object_list %}
             <div class="col-xl-6 col-md-6 col-lg-6">
                 <div class="single_delicious d-flex align-items-center">
                     <div class="thumb">
