--- a/specsmart/templates/base.html
+++ b/specsmart/templates/base.html
@@ -71,7 +71,15 @@
 <!--bottom-->
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="say_hello">
-                                    <a href="#">Написать нам</a>
+<!--                                    <a href="#">Написать нам </a>-->
+                                    {% if user.is_authenticated %}
+                                    <p class="info">
+                                    Привет, {{user.username}}</p>
+                                    <a href="{% url 'users:logout' %}">Выход</a>
+                                    {% else %}
+                                    <a href="{% url 'users:login' %}">Вход</a>
+                                    <a href="{% url 'users:register' %}">Регистрация</a>
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="col-12">
